# dunphy-family-vacation-debate

./: .gitignore  README.md  browser_app.py  main.py  pyproject.toml  terminal_app.py
agents/: alex.py  claire.py  haley.py  luke.py  manny.py  phil.py
discussion/: orchestrator.py  phases.py  transcript.py
docs/: discussion-flow.d2  system-architecture.d2
family-prompts/: alex.md  claire.md  haley.md  luke.md  manny.md  phil.md
ui/stitch/: DESIGN.md  code.html
utils/: llm_client.py  token_tracker.py
